[Misc] Use Stream.toList() instead of collect(Collectors.toList()) (SonarCloud java:S6204)
* Replace Stream.collect(Collectors.toList()) with the more concise
  Stream.toList() where the resulting list is used read-only (returned
  from an internal API, iterated, queried, or passed to a consumer that
  copies it).
* Since Stream.toList() returns an unmodifiable list, sites where the
  list is (or may be) mutated, or where it escapes through a public API
  (a public/protected method of a non-internal class, a method
  implementing a public interface, a script service, or a value stored
  in a public-API object that does not copy it) are left using
  Collectors.toList().
* Remove the now-unused java.util.stream.Collectors imports.

Co-Authored-By: Vincent Massol <vincent@massol.net>