@@ -27,7 +27,6 @@ import java.util.LinkedHashMap;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.StringUtils;
 import org.apache.ecs.xhtml.input;
@@ -1040,7 +1039,7 @@ public abstract class ListClass extends PropertyClass
         } else {
             List<String> actualList;
             if (filterEmptyValues && list != null) {
-                actualList = list.stream().filter(item -> !StringUtils.isEmpty(item)).collect(Collectors.toList());
+                actualList = list.stream().filter(item -> !StringUtils.isEmpty(item)).toList();
             } else {
                 actualList = list;
             }
